src/monosat/api/Monosat.h

typedef Monosat::SimpSolver* SolverPtr;
typedef Monosat::GraphTheorySolver<int64_t>* GraphTheorySolver_long;
typedef Monosat::GraphTheorySolver<double>* GraphTheorySolver_double;
typedef Monosat::BVTheorySolver<int64_t>* BVTheoryPtr;
typedef Monosat::FSMTheorySolver* FSMTheorySolverPtr;
typedef int64_t Weight;
typedef void * SolverPtr;
typedef void *  BVTheoryPtr;
typedef void *  GraphTheorySolver_long;
typedef void *  GraphTheorySolver_double;
typedef void *  FSMTheorySolverPtr;
typedef int64_t Weight;
int nVars(SolverPtr S);
int nClauses(SolverPtr S);
int nBitvectors(SolverPtr S, BVTheoryPtr bv);
int newBitvector_const(SolverPtr S, BVTheoryPtr bv, int bvWidth, Weight constval);
int newBitvector(SolverPtr S, BVTheoryPtr bv, int* bits, int n_bits);
int newBVComparison_const_lt(SolverPtr S, BVTheoryPtr bv, int bvID, Weight weight);
int newBVComparison_bv_lt(SolverPtr S, BVTheoryPtr bv, int bvID, int compareID);
int newBVComparison_const_leq(SolverPtr S, BVTheoryPtr bv, int bvID, Weight weight);
int newBVComparison_bv_leq(SolverPtr S, BVTheoryPtr bv, int bvID, int compareID);
int newBVComparison_const_gt(SolverPtr S, BVTheoryPtr bv, int bvID, Weight weight);
int newBVComparison_bv_gt(SolverPtr S, BVTheoryPtr bv, int bvID, int compareID);
int newBVComparison_const_geq(SolverPtr S, BVTheoryPtr bv, int bvID, Weight weight);
int newBVComparison_bv_geq(SolverPtr S, BVTheoryPtr bv, int bvID, int compareID);
//Convert the specified bitvector, as well as any other bitvectors in its cone of influence, into pure CNF
void bv_bitblast(SolverPtr S, BVTheoryPtr bv, int bvID);
void bv_concat(SolverPtr S, BVTheoryPtr bv, int aID, int bID, int resultID);
void bv_slice(SolverPtr S, BVTheoryPtr bv, int aID, int lower, int upper, int resultID);
void bv_not(SolverPtr S, BVTheoryPtr bv, int bvaID, int bvResultID);
void bv_and(SolverPtr S, BVTheoryPtr bv, int bvaID, int bvbID, int bvResultID);
void bv_nand(SolverPtr S, BVTheoryPtr bv, int bvaID, int bvbID, int bvResultID);
void bv_or(SolverPtr S, BVTheoryPtr bv, int bvaID, int bvbID, int bvResultID);
void bv_nor(SolverPtr S, BVTheoryPtr bv, int bvaID, int bvbID, int bvResultID);
void bv_xor(SolverPtr S, BVTheoryPtr bv, int bvaID, int bvbID, int bvResultID);
void bv_xnor(SolverPtr S, BVTheoryPtr bv, int bvaID, int bvbID, int bvResultID);
void bv_ite(SolverPtr S, BVTheoryPtr bv, int condition_lit, int bvThenID, int bvElseID, int bvResultID);
void bv_addition(SolverPtr S, BVTheoryPtr bv, int bvID1, int bvID2, int resultID);
void bv_subtraction(SolverPtr S, BVTheoryPtr bv, int bvID1, int bvID2, int resultID);
void bv_multiply(SolverPtr S, BVTheoryPtr bv, int bvID1, int bvID2, int resultID);
void bv_divide(SolverPtr S, BVTheoryPtr bv, int bvID1, int bvID2, int resultID);
void bv_min(SolverPtr S, BVTheoryPtr bv, int* args, int n_args, int resultID);
void bv_max(SolverPtr S, BVTheoryPtr bv, int* args, int n_args, int resultID);
void bv_popcount(SolverPtr S, BVTheoryPtr bv, int* args, int n_args, int resultID);
void bv_unary(SolverPtr S, BVTheoryPtr bv, int* args, int n_args, int resultID);
//theory interface for graphs

GraphTheorySolver_long newGraph(SolverPtr S);
int newNode(SolverPtr S, GraphTheorySolver_long G);
int newEdge(SolverPtr S, GraphTheorySolver_long G, int from, int to, Weight weight);
int newEdge_double(SolverPtr S, GraphTheorySolver_double G, int from, int to, double weight);
int newEdge_bv(SolverPtr S, GraphTheorySolver_long G, int from, int to, int bvID);
int nNodes(SolverPtr S, GraphTheorySolver_long G);
int nEdges(SolverPtr S, GraphTheorySolver_long G);
int reaches(SolverPtr S, GraphTheorySolver_long G, int from, int to);
int reachesBackward(SolverPtr S, GraphTheorySolver_long G, int from, int to);
int onPath(SolverPtr S, GraphTheorySolver_long G, int nodeOnPath, int from, int to);
int shortestPathUnweighted_lt_const(SolverPtr S, GraphTheorySolver_long G, int from, int to, int steps);
int shortestPathUnweighted_leq_const(SolverPtr S, GraphTheorySolver_long G, int from, int to, int steps);
int shortestPath_lt_const(SolverPtr S, GraphTheorySolver_long G, int from, int to, Weight dist);
int shortestPath_leq_const(SolverPtr S, GraphTheorySolver_long G, int from, int to, Weight dist);
int shortestPath_lt_bv(SolverPtr S, GraphTheorySolver_long G, int from, int to, int bvID);
int shortestPath_leq_bv(SolverPtr S, GraphTheorySolver_long G, int from, int to, int bvID);
int maximumFlow_geq(SolverPtr S, GraphTheorySolver_long G, int source, int sink, Weight weight);
int maximumFlow_gt(SolverPtr S, GraphTheorySolver_long G, int source, int sink, Weight weight);
int maximumFlow_geq_bv(SolverPtr S, GraphTheorySolver_long G, int source, int sink, int bvID);
int maximumFlow_gt_bv(SolverPtr S, GraphTheorySolver_long G, int source, int sink, int bvID);
int minimumSpanningTree_leq(SolverPtr S, GraphTheorySolver_long G, Weight weight);
int minimumSpanningTree_lt(SolverPtr S, GraphTheorySolver_long G, Weight weight);
int connectedComponents_geq_const(SolverPtr S, GraphTheorySolver_long G, int components);
int acyclic_undirected(SolverPtr S, GraphTheorySolver_long G);
int acyclic_directed(SolverPtr S, GraphTheorySolver_long G);
void newEdgeSet(SolverPtr S, GraphTheorySolver_long G, int* edges, int n_edges, bool enforceEdgeAssignment);
//theory interface for finite state machines
FSMTheorySolverPtr initFSMTheory(SolverPtr S);