src/monosat/api/python/monosat/monosat_c.py


            self.monosat_c.newBitvector_const.argtypes = [
                c_solver_p,
                c_bv_p,
                c_int,
                c_int64,
            ]
            self.monosat_c.newBitvector_const.restype = c_bvID

            self.monosat_c.newBitvector.argtypes = [c_solver_p, c_bv_p, c_var_p, c_int]
            self.monosat_c.newBitvector.restype = c_bvID

            self.monosat_c.nBitvectors.argtypes = [c_solver_p, c_bv_p]
            self.monosat_c.nBitvectors.restype = c_int
            self.monosat_c.newBVComparison_const_lt.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_int64,
            ]
            self.monosat_c.newBVComparison_const_lt.restype = c_literal

            self.monosat_c.newBVComparison_bv_lt.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.newBVComparison_bv_lt.restype = c_literal

            self.monosat_c.newBVComparison_const_leq.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_int64,
            ]
            self.monosat_c.newBVComparison_const_leq.restype = c_literal

            self.monosat_c.newBVComparison_bv_leq.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.newBVComparison_bv_leq.restype = c_literal

            self.monosat_c.newBVComparison_const_gt.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_int64,
            ]
            self.monosat_c.newBVComparison_const_gt.restype = c_literal

            self.monosat_c.newBVComparison_bv_gt.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.newBVComparison_bv_gt.restype = c_literal

            self.monosat_c.newBVComparison_const_geq.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_int64,
            ]
            self.monosat_c.newBVComparison_const_geq.restype = c_literal

            self.monosat_c.newBVComparison_bv_geq.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.newBVComparison_bv_geq.restype = c_literal

            self.monosat_c.bv_addition.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.bv_subtraction.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]

            self.monosat_c.bv_multiply.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.bv_divide.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]

            self.monosat_c.bv_ite.argtypes = [
                c_solver_p,
                c_bv_p,
                c_literal,
                c_bvID,
                c_bvID,
                c_bvID,
            ]

            self.monosat_c.bv_min.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID_p,
                c_int,
                c_bvID,
            ]
            self.monosat_c.bv_max.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID_p,
                c_int,
                c_bvID,
            ]

            self.monosat_c.bv_not.argtypes = [c_solver_p, c_bv_p, c_bvID, c_bvID]
            self.monosat_c.bv_and.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.bv_nand.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.bv_or.argtypes = [c_solver_p, c_bv_p, c_bvID, c_bvID, c_bvID]
            self.monosat_c.bv_nor.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.bv_xor.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.bv_xnor.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]

            self.monosat_c.bv_concat.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_bvID,
                c_bvID,
            ]
            self.monosat_c.bv_popcount.argtypes = [
                c_solver_p,
                c_bv_p,
                c_literal_p,
                c_int,
                c_bvID,
            ]
            self.monosat_c.bv_unary.argtypes = [
                c_solver_p,
                c_bv_p,
                c_literal_p,
                c_int,
                c_bvID,
            ]

            self.monosat_c.bv_bitblast.argtypes = [c_solver_p, c_bv_p, c_bvID]

            self.monosat_c.bv_slice.argtypes = [
                c_solver_p,
                c_bv_p,
                c_bvID,
                c_int,
                c_int,
                c_bvID,
            ]

            self.monosat_c.newGraph.argtypes = [c_solver_p]
            self.monosat_c.newGraph.restype = c_graph_p

            self.monosat_c.newNode.argtypes = [c_solver_p, c_graph_p]
            self.monosat_c.newNode.restype = c_int

            self.monosat_c.nNodes.argtypes = [c_solver_p, c_graph_p]
            self.monosat_c.nNodes.restype = c_int

            self.monosat_c.nEdges.argtypes = [c_solver_p, c_graph_p]
            self.monosat_c.nEdges.restype = c_int

            self.monosat_c.newEdge.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int64,
            ]
            self.monosat_c.newEdge.restype = c_literal

            self.monosat_c.newEdge_double.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_double,
            ]
            self.monosat_c.newEdge_double.restype = c_literal

            self.monosat_c.newEdge_bv.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_bvID,
            ]
            self.monosat_c.newEdge_bv.restype = c_literal

            self.monosat_c.reaches.argtypes = [c_solver_p, c_graph_p, c_int, c_int]
            self.monosat_c.reaches.restype = c_literal

            self.monosat_c.reachesBackward.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
            ]
            self.monosat_c.reachesBackward.restype = c_literal

            self.monosat_c.onPath.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int,
            ]
            self.monosat_c.onPath.restype = c_literal

            self.monosat_c.shortestPathUnweighted_lt_const.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int64,
            ]
            self.monosat_c.shortestPathUnweighted_lt_const.restype = c_literal

            self.monosat_c.shortestPathUnweighted_leq_const.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int64,
            ]
            self.monosat_c.shortestPathUnweighted_leq_const.restype = c_literal

            self.monosat_c.shortestPath_lt_const.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int64,
            ]
            self.monosat_c.shortestPath_lt_const.restype = c_literal

            self.monosat_c.shortestPath_leq_const.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int64,
            ]
            self.monosat_c.shortestPath_leq_const.restype = c_literal

            self.monosat_c.shortestPath_lt_bv.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_bvID,
            ]
            self.monosat_c.shortestPath_lt_bv.restype = c_literal

            self.monosat_c.shortestPath_leq_bv.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_bvID,
            ]
            self.monosat_c.shortestPath_leq_bv.restype = c_literal

            self.monosat_c.nVars.argtypes = [c_solver_p]
            self.monosat_c.nVars.restype = c_int

            self.monosat_c.nClauses.argtypes = [c_solver_p]
            self.monosat_c.nClauses.restype = c_int

            self.monosat_c.maximumFlow_geq.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int64,
            ]
            self.monosat_c.maximumFlow_geq.restype = c_literal

            self.monosat_c.maximumFlow_gt.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_int64,
            ]
            self.monosat_c.maximumFlow_gt.restype = c_literal

            self.monosat_c.maximumFlow_geq_bv.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_bvID,
            ]
            self.monosat_c.maximumFlow_geq_bv.restype = c_literal

            self.monosat_c.maximumFlow_gt_bv.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int,
                c_int,
                c_bvID,
            ]
            self.monosat_c.maximumFlow_gt_bv.restype = c_literal

            self.monosat_c.minimumSpanningTree_leq.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int64,
            ]
            self.monosat_c.minimumSpanningTree_leq.restype = c_literal

            self.monosat_c.minimumSpanningTree_lt.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int64,
            ]
            self.monosat_c.minimumSpanningTree_lt.restype = c_literal

            self.monosat_c.acyclic_undirected.argtypes = [c_solver_p, c_graph_p]
            self.monosat_c.acyclic_undirected.restype = c_literal

            self.monosat_c.acyclic_directed.argtypes = [c_solver_p, c_graph_p]
            self.monosat_c.acyclic_directed.restype = c_literal

            self.monosat_c.connectedComponents_geq_const.argtypes = [
                c_solver_p,
                c_graph_p,
                c_int
            ]
            self.monosat_c.connectedComponents_geq_const.restype = c_literal

            self.monosat_c.newEdgeSet.argtypes = [
                c_solver_p,
                c_graph_p,
                c_literal_p,
                c_int,
                c_bool,
            ]

            self.monosat_c.initFSMTheory.argtypes = [c_solver_p]
            self.monosat_c.initFSMTheory.restype = c_fsm_theory_p
